gobmkida/c3/tryko
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tryko/src/engine/board.c:1079:6: error: use of undeclared identifier 'off_4AC590'
v9 = off_4AC590[komaster]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/tryko/src/obj/1/board.o] Error 1
